--- a/locale/cs_CZ/LC_MESSAGES/atk14.po
+++ b/locale/cs_CZ/LC_MESSAGES/atk14.po
@@ -50,8 +50,8 @@ msgstr "j. n. Y H:i"
 #: ../src/atk14/atk14_locale.php:137
 msgid "atk14.parse_datetime_pattern"
 msgstr ""
-"/^(?<day>[0-9]{1,2})\\.[  ]*(?<month>[0-9]{1,2})\\.[  ]*(?<year>[0-9]{4})\\s"
-"+(?<hours>[0-9]{2}):(?<minutes>[0-9]{2})$/"
+"/^(?<day>[0-9]{1,2})\\.[  ]*(?<month>[0-9]{1,2})\\.[  ]*(?<year>[0-9]"
+"{4})\\s+(?<hours>[0-9]{2}):(?<minutes>[0-9]{2})$/"
 
 #: ../src/atk14/atk14_locale.php:150
 msgid "atk14.datetime_with_seconds_format"
@@ -220,8 +220,8 @@ msgstr "Soubor musí být obrázek (teď je to %mime_type%)."
 #: ../src/forms/fields/image_field.php:24
 msgid "Ensure this image is %width_required% pixels wide (it is %width%)."
 msgstr ""
-"Ujistěte se, že je šířka obrázku %width_required% bodů (teď je šířoký %width"
-"%)."
+"Ujistěte se, že je šířka obrázku %width_required% bodů (teď je šířoký "
+"%width%)."
 
 #: ../src/forms/fields/image_field.php:25
 msgid "Ensure this image is %height_required% pixels high (it is %height%)."
