--- a/locale/en_US/LC_MESSAGES/application.po
+++ b/locale/en_US/LC_MESSAGES/application.po
@@ -7,15 +7,15 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-30 12:21+0100\n"
-"PO-Revision-Date: 2022-11-30 12:33+0100\n"
+"POT-Creation-Date: 2023-01-27 16:14+0100\n"
+"PO-Revision-Date: 2023-01-27 16:38+0100\n"
 "Last-Translator: Jaromir Tomek <jaromir.tomek@gmail.com>\n"
 "Language-Team: Team <team@email.com>\n"
 "Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.0.1\n"
 
 msgid "Nahoru"
 msgstr "Top"
@@ -313,12 +313,12 @@ msgstr "Please check the consent with Terms and Conditions."
 
 msgid ""
 "Kliknutím na tlačítko Dokončit objednávku souhlasíte<br>a&nbsp;potvrzujete, "
-"že&nbsp;jste se seznámil s&nbsp;<a href=\"%1\" target=\"_blank"
-"\">obchodními&nbsp;podmínkami.</a>"
+"že&nbsp;jste se seznámil s&nbsp;<a href=\"%1\" "
+"target=\"_blank\">obchodními&nbsp;podmínkami.</a>"
 msgstr ""
 "Clicking on the Finish order button you agree <br>and&nbsp;confirm, "
-"that&nbsp;you have been acknowledged with&nbsp;<a href=\"%1\" target=\"_blank"
-"\">Terms&nbsp;and&nbsp;Conditions.</a>"
+"that&nbsp;you have been acknowledged with&nbsp;<a href=\"%1\" "
+"target=\"_blank\">Terms&nbsp;and&nbsp;Conditions.</a>"
 
 msgid "Už mám účet"
 msgstr "I have an account already"
@@ -552,8 +552,8 @@ msgid ""
 "objednávek\"</a> Vašeho zákaznického účtu."
 msgstr ""
 "In case that you want to check your order,<br/>\n"
-"you can find it in the section <a href=\"%1\" style=\"%2\"> \"Order history"
-"\" </a> of your customer account."
+"you can find it in the section <a href=\"%1\" style=\"%2\"> \"Order "
+"history\" </a> of your customer account."
 
 msgid "Vaše objednávka č. %1 byla zrušena."
 msgstr "Your order No. %1 has been cancelled."
@@ -804,6 +804,9 @@ msgstr "Show all results"
 msgid "Attachments"
 msgstr "Attachments"
 
+msgid "Your favourite product"
+msgstr "Your favourite product"
+
 msgid "Products in the collection"
 msgstr "Products in the collection"
 
@@ -1018,13 +1021,25 @@ msgstr "Delivery addresses"
 msgid "Oblíbené produkty"
 msgstr "Favourite products"
 
-#: ../app/controllers/logins_controller.php:33
+#: ../app/controllers/logins_controller.php:35
 #: ../app/forms/logins/destroy_form.php:4
 msgid "Sign out"
 msgstr "Sign out"
 
 msgid "Menu"
 msgstr "Menu"
+
+msgid "Zobrazit kategorie"
+msgstr "View categories"
+
+msgid "Skrýt kategorie"
+msgstr "Hide categories"
+
+msgid "Previous"
+msgstr "Previous"
+
+msgid "Next"
+msgstr "Next"
 
 #: ../app/controllers/application.php:110
 msgid "Basket"
@@ -1099,12 +1114,6 @@ msgstr "Corresponding to the selection:"
 
 msgid "Photo gallery"
 msgstr "Photo gallery"
-
-msgid "Previous"
-msgstr "Previous"
-
-msgid "Next"
-msgstr "Next"
 
 msgid "Select selling region"
 msgstr "Select selling region"
@@ -1308,11 +1317,11 @@ msgstr "Are you admin?"
 msgid "Yes, you are"
 msgstr "Yes, you are"
 
-#: ../app/controllers/users_controller.php:50
+#: ../app/controllers/users_controller.php:52
 msgid "Change your account data"
 msgstr "Change your account data"
 
-#: ../app/controllers/users_controller.php:78
+#: ../app/controllers/users_controller.php:80
 msgid "Change your password"
 msgstr "Change your password"
 
@@ -1634,7 +1643,7 @@ msgid ""
 msgstr ""
 "After download digital files of the order please log in as user <em>%s</em>"
 
-#: ../app/controllers/logins_controller.php:16
+#: ../app/controllers/logins_controller.php:18
 #, php-format
 msgid ""
 "Wrong login and password combination. <a href=\"%s\">Have you forgotten your "
@@ -1643,20 +1652,20 @@ msgstr ""
 "Wrong login and password combination. <a href=\"%s\">Have you forgotten your "
 "password?</a>"
 
-#: ../app/controllers/logins_controller.php:18
+#: ../app/controllers/logins_controller.php:20
 msgid "Wrong login and password combination"
 msgstr "Wrong login and password combination"
 
-#: ../app/controllers/logins_controller.php:25
+#: ../app/controllers/logins_controller.php:27
 #, php-format
 msgid "You have been successfully logged in as <em>%s</em>"
 msgstr "You have been successfully logged in as <em>%s</em>"
 
-#: ../app/controllers/logins_controller.php:37
+#: ../app/controllers/logins_controller.php:39
 msgid "You have been successfully logged out"
 msgstr "You have been successfully logged out"
 
-#: ../app/controllers/logins_controller.php:37
+#: ../app/controllers/logins_controller.php:39
 #, php-format
 msgid "You've stayed logged in as <em>%s</em>"
 msgstr "You've stayed logged in as <em>%s</em>"
@@ -1694,7 +1703,7 @@ msgstr ""
 "set."
 
 #: ../app/controllers/password_recoveries_controller.php:65
-#: ../app/controllers/users_controller.php:92
+#: ../app/controllers/users_controller.php:94
 msgid "Your password has been updated successfully"
 msgstr "Your password has been updated successfully"
 
@@ -1727,7 +1736,7 @@ msgstr "List of stores"
 msgid "To register as a new user, sign out first"
 msgstr "To register as a new user, sign out first"
 
-#: ../app/controllers/users_controller.php:35
+#: ../app/controllers/users_controller.php:37
 #, php-format
 msgid ""
 "You have been successfully registered and now you are logged in as <em>%s</"
@@ -1736,19 +1745,19 @@ msgstr ""
 "You have been successfully registered and now you are logged in as <em>%s</"
 "em>"
 
-#: ../app/controllers/users_controller.php:44
+#: ../app/controllers/users_controller.php:46
 msgid "Thank you for your registration!"
 msgstr "Thank you for your registration!"
 
-#: ../app/controllers/users_controller.php:56
+#: ../app/controllers/users_controller.php:58
 msgid "Nothing has been changed"
 msgstr "Nothing has been changed"
 
-#: ../app/controllers/users_controller.php:63
+#: ../app/controllers/users_controller.php:65
 msgid "This email address is used by another user."
 msgstr "This email address is used by another user."
 
-#: ../app/controllers/users_controller.php:72
+#: ../app/controllers/users_controller.php:74
 #, php-format
 msgid ""
 "Your account data has been updated. Next time you should sign-in with login "
@@ -1757,11 +1766,11 @@ msgstr ""
 "Your account data has been updated. Next time you should sign-in with login "
 "name <em>%s</em>."
 
-#: ../app/controllers/users_controller.php:72
+#: ../app/controllers/users_controller.php:74
 msgid "Your account data has been updated"
 msgstr "Your account data has been updated"
 
-#: ../app/controllers/users_controller.php:82
+#: ../app/controllers/users_controller.php:84
 msgid "This is not your current password"
 msgstr "This is not your current password"
 
@@ -1876,19 +1885,19 @@ msgstr ""
 
 #: ../app/fields/decimal_field.php:25
 msgid ""
-"Ensure this number has at most %max% digits in integer-part (it has %integers"
-"%)."
+"Ensure this number has at most %max% digits in integer-part (it has "
+"%integers%)."
 msgstr ""
-"Ensure this number has at most %max% digits in integer-part (it has %integers"
-"%)."
+"Ensure this number has at most %max% digits in integer-part (it has "
+"%integers%)."
 
 #: ../app/fields/decimal_field.php:26
 msgid ""
-"Ensure this number has at most %max% decimal places (it has %decimal_places"
-"%)."
+"Ensure this number has at most %max% decimal places (it has "
+"%decimal_places%)."
 msgstr ""
-"Ensure this number has at most %max% decimal places (it has %decimal_places"
-"%)."
+"Ensure this number has at most %max% decimal places (it has "
+"%decimal_places%)."
 
 #: ../app/fields/delivery_method_at_checkout_field.php:36
 msgid "There is no such delivery method"
@@ -2040,11 +2049,11 @@ msgstr "VAT number is incorrect"
 msgid "Toto není správný slevový kupón"
 msgstr "The discount coupon is incorrect"
 
-#: ../app/fields/zip_field.php:47
+#: ../app/fields/zip_field.php:23
 msgid "Please enter a valid zip code"
 msgstr "Please enter a valid zip code"
 
-#: ../app/fields/zip_field.php:86 ../app/fields/zip_field.php:87
+#: ../app/fields/zip_field.php:26 ../app/fields/zip_field.php:27
 msgid "Enter the ZIP code as NNN NN"
 msgstr "Enter the ZIP code as NNN NN"
 
